ansible/roles/manage-k3s-homelab-cluster/files/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
