ansible/roles/manage-k3s-homelab-cluster/files/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    metallb.universe.tf/address-pool: vlan20-pool
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: argocd.hoareau-marion.eu
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: argocd.hoareau-marion.eu
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: argocd-hoareau-marion-eu-tls
      mode: Terminate
