ansible/roles/manage-k3s-homelab-cluster/files/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  parentRefs:
  - name: virtual-management-gateway
    namespace: virtual-management
    sectionName: argocd-http
  hostnames:
  - argocd.hoareau-marion.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        hostname: argocd.hoareau-marion.eu
        statusCode: 301
