ansible/roles/manage-k3s-homelab-cluster/files/argocd/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: virtual-management-gateway
    namespace: virtual-management
    sectionName: https
  hostnames:
  - argocd.hoareau-marion.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: argocd-server
      port: 80
