ansible/roles/manage-k3s-homelab-cluster/files/argocd/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-redis-access
  namespace: argocd
spec:
  # ALLOW to argocd-redis
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  ingress:
  - fromEndpoints:
    # ALLOW from argocd-server
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        name: argocd-server
    # ALLOW from argocd-repo-server
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        app.kubernetes.io/name: argocd-repo-server
    # ALLOW from argocd-application-controller
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        app.kubernetes.io/name: argocd-application-controller
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  egress:
  # DNS to kube-dns/CoreDNS (UDP 53)
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  # HTTPS to internet (TCP 443)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  # TO argocd-redis
  - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: argocd
          app.kubernetes.io/name: argocd-redis
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
